Add tag statistics to feedbacksummary, huge homepage rework